﻿*******************************************************************

   Название проекта : OPOS драйвер WebKassa
   Компания         : ШТРИХ-М, Россия 
                     (495) 787-60-90, www.shtrih-m.ru

*******************************************************************

  OposWebKassa_0.68.exe
  12 июля 2024 20:30
  
  [-] Исправлена ошибка метода Claim
  [-] Исправлена ошибка метода SetDeviceEnabled
  
*******************************************************************

  OposWebKassa_0.67.exe
  3 июля 2024 15:30
  
  [+] Добавлена печать автономного режима 
  
*******************************************************************

  OposWebKassa_0.66.exe
  10 июня 2024 17:50
  
  [-] Исправлена запись в лог символов Unicode
  [-] Исправлены суммы внесений и выплат в X и Z отчетах
  
*******************************************************************

  OposWebKassa_0.64.exe
  30 мая 2024 19:10
  
  [-] Исправлена печать и отображение символов Unicode
  
*******************************************************************

  OposWebKassa_0.63.exe
  30 мая 2024 11:10
  
  [-] Исключено чтение чека через запрос HistoryByNumber
  [-] Исправлена ошибка метода getData(FPTR_GD_GRAND_TOTAL)
  [-] Изменена команда X отчета на api/xreport
  [-] Изменена команда Z отчета на api/zreport
  [-] Исправлена печать и отображение казахских символов
  
*******************************************************************

  OposWebKassa_0.62.exe
  24 мая 2024 19:00
  
  [-] Исправлена ошибка мобильного типа оплаты
  [-] Исправлена ошибка метода getData
  
*******************************************************************

  OposWebKassa_0.60.exe
  23 мая 2024 09:10
  
  [-] Исправлена ошибка Access Violation
  
*******************************************************************

  OposWebKassa_0.58.exe
  17 мая 2024 17:23
  
  [-] Исправлена ошибка печати заголовка чека
  
*******************************************************************

  OposWebKassa_0.56.exe