@@ -1,22 +1,21 @@
 [Closed Files]
-File_0=SourceModule,'C:\projects\WebKassa\src\OposWebkassa\units\ReceiptItem.pas',0,1,1,22,9,0,0
-File_1=SourceModule,'C:\projects\WebKassa\test\WebkassaAccTest\units\duWebkassaImpl.pas',0,1,393,1,387,0,0
-File_2=SourceModule,'C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaClient.pas',0,1,3395,31,3426,0,0
-File_3=SourceModule,'C:\projects\WebKassa\test\OposWebkassaTest\units\duPrinterParameters.pas',0,1,187,150,193,0,0
-File_4=SourceModule,'C:\projects\WebKassa\src\OposConfig\Fmu\fmuFptrMiscParams.pas',0,1,42,19,60,1,0
-File_5=SourceModule,'C:\projects\WebKassa\src\Shared\PrinterParametersIni.pas',0,1,239,5,253,0,0
-File_6=SourceModule,'C:\projects\WebKassa\src\Shared\PrinterParametersReg.pas',0,1,1,38,12,0,0
+File_0=SourceModule,'C:\projects\WebKassa\src\OposWebkassa\units\WebkassaClient.pas',0,1,1707,1,1726,0,0
+File_1=SourceModule,'C:\projects\WebKassa\src\Opos\OposServiceDevice19.pas',0,1,227,19,261,0,0
+File_2=SourceModule,'C:\projects\WebKassa\src\Opos\OposSemaphore.pas',0,1,55,14,78,0,0
+File_3=SourceModule,'c:\program files (x86)\borland\delphi7\source\rtl\Win\Windows.pas',0,1,29146,1,29165,0,0
+File_4=SourceModule,'C:\projects\WebKassa\src\Shared\PrinterParametersX.pas',0,1,1,24,13,0,0
+File_5=SourceModule,'C:\projects\WebKassa\src\Shared\PrinterParameters.pas',0,1,695,1,704,0,0
+File_6=SourceModule,'C:\projects\WebKassa\src\Shared\PrinterTypes.pas',0,1,39,95,51,0,0
+File_7=SourceModule,'C:\projects\WebKassa\src\OposWebkassa\units\ReceiptItem.pas',0,1,1,22,9,0,0
 
 [Modules]
-Module0=C:\projects\WebKassa\src\Shared\PrinterTypes.pas
+Module0=C:\projects\WebKassa\src\OposWebkassa\Units\oleFiscalPrinter.pas
 Module1=C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas
-Module2=C:\projects\WebKassa\src\Shared\PrinterParameters.pas
-Module3=C:\projects\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr
-Count=4
+Count=2
 EditWindowCount=1
 TypeLibWindowCount=1
 
-[C:\projects\WebKassa\src\Shared\PrinterTypes.pas]
+[C:\projects\WebKassa\src\OposWebkassa\Units\oleFiscalPrinter.pas]
 ModuleType=SourceModule
 FormState=0
 FormOnTop=0
@@ -26,13 +25,7 @@ ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
-[C:\projects\WebKassa\src\Shared\PrinterParameters.pas]
-ModuleType=SourceModule
-FormState=0
-FormOnTop=0
-
 [C:\projects\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr]
-ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
@@ -65,19 +58,17 @@ FormState=0
 FormOnTop=0
 
 [EditWindow0]
-ViewCount=4
-CurrentView=3
+ViewCount=2
+CurrentView=0
 View0=0
 View1=1
-View2=2
-View3=3
 CodeExplorer=CodeExplorer@EditWindow0
 MessageView=MessageView@EditWindow0
 Create=1
 Visible=1
 State=2
-Left=474
-Top=277
+Left=360
+Top=138
 Width=1302
 Height=682
 MaxLeft=-8
@@ -90,36 +81,22 @@ LeftPanelSize=0
 LeftPanelClients=CodeExplorer@EditWindow0
 LeftPanelData=00000400010000000C000000436F64654578706C6F7265720000000000000000000000000000000000FFFFFFFF
 RightPanelSize=0
-BottomPanelSize=196
+BottomPanelSize=0
 BottomPanelClients=MessageView@EditWindow0
-BottomPanelData=000004000000000000000000000000000000000000000000000100000000000000000B0000004D65737361676556696577FFFFFFFF
+BottomPanelData=00000400010000000B0000004D657373616765566965770000000000000000000000000000000000FFFFFFFF
 
 [View0]
-Module=C:\projects\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr
-CursorX=71
-CursorY=16
-TopLine=1
+Module=C:\projects\WebKassa\src\OposWebkassa\Units\oleFiscalPrinter.pas
+CursorX=103
+CursorY=344
+TopLine=335
 LeftCol=1
 
 [View1]
-Module=C:\projects\WebKassa\src\Shared\PrinterParameters.pas
-CursorX=1
-CursorY=704
-TopLine=695
-LeftCol=1
-
-[View2]
 Module=C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas
-CursorX=1
-CursorY=3080
-TopLine=3065
-LeftCol=1
-
-[View3]
-Module=C:\projects\WebKassa\src\Shared\PrinterTypes.pas
-CursorX=33
-CursorY=53
-TopLine=39
+CursorX=5
+CursorY=2757
+TopLine=2746
 LeftCol=1
 
 [TypeLibEditWindow0]
@@ -164,7 +141,9 @@ LRDockWidth=320
 Dockable=1
 
 [Breakpoints]
-Count=0
+Count=2
+Breakpoint0='C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaClient.pas',1709,'',0,1,'',1,0,0,'',1,'','',''
+Breakpoint1='C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas',1320,'',0,1,'',1,0,0,'',1,'','',''
 
 [AddressBreakpoints]
 Count=0
@@ -173,9 +152,9 @@ Count=0
 Create=1
 Visible=1
 State=2
-Left=268
-Top=225
-Width=1652
+Left=2
+Top=0
+Width=1918
 Height=122
 MaxLeft=-8
 MaxTop=-8
@@ -189,13 +168,13 @@ Create=1
 Visible=1
 State=0
 Left=0
-Top=112
-Width=526
-Height=605
+Top=117
+Width=546
+Height=432
 MaxLeft=-1
 MaxTop=-1
-ClientWidth=510
-ClientHeight=571
+ClientWidth=530
+ClientHeight=398
 TBDockHeight=681
 LRDockWidth=445
 Dockable=0
@@ -232,10 +211,10 @@ ClientHeight=60
 
 [PropertyInspector]
 Create=1
-Visible=1
+Visible=0
 State=0
-Left=1
-Top=116
+Left=-13
+Top=174
 Width=363
 Height=668
 MaxLeft=-1
@@ -329,15 +308,15 @@ Dockable=1
 Create=1
 Visible=0
 State=0
-Left=140
-Top=717
-Width=917
-Height=260
+Left=402
+Top=596
+Width=436
+Height=917
 MaxLeft=-1
 MaxTop=-1
-ClientWidth=901
-ClientHeight=226
-TBDockHeight=200
+ClientWidth=420
+ClientHeight=883
+TBDockHeight=164
 LRDockWidth=445
 Dockable=1
 
@@ -437,8 +416,8 @@ Dockable=1
 Create=1
 Visible=0
 State=0
-Left=-178
-Top=-13
+Left=-164
+Top=-6
 Width=140
 Height=305
 MaxLeft=-1
@@ -451,17 +430,17 @@ Dockable=1
 
 [MessageView@EditWindow0]
 Create=1
-Visible=1
+Visible=0
 State=0
-Left=12
-Top=0
-Width=1908
-Height=196
+Left=-170
+Top=-705
+Width=443
+Height=85
 MaxLeft=-1
 MaxTop=-1
-ClientWidth=1908
-ClientHeight=196
-TBDockHeight=196
+ClientWidth=443
+ClientHeight=85
+TBDockHeight=85
 LRDockWidth=443
 Dockable=1
 
@@ -473,8 +452,8 @@ DockSiteType=0
 Create=1
 Visible=0
 State=0
-Left=449
-Top=575
+Left=789
+Top=224
 Width=872
 Height=535
 MaxLeft=-1
