@@ -52,12 +52,12 @@ TestSendReceipt2=0
 TestSumInCashbox=0
 [Tests.WebkassaAccTest.exe.TWebkassaImplTest]
 OpenClaimEnable=1
-TestCashIn=0
+TestCashIn=1
 TestCashOut=0
 TestZReport=0
-TestXReport=0
-TestNonFiscal=0
-TestFiscalReceipt=0
+TestXReport=1
+TestNonFiscal=1
+TestFiscalReceipt=1
 TestFiscalReceipt2=0
 TestFiscalReceipt3=0
 TestFiscalReceiptWithVAT=0
