@@ -6,6 +6,14 @@
 
 *******************************************************************
 
+  OposWebKassa_0.69.exe
+  15 июля 2024 14:00
+  
+  [-] Изменена работа метода Claim. В методе Claim теперь 
+      нет подключения к серверу WebKassa.
+  
+*******************************************************************
+
   OposWebKassa_0.68.exe
   12 июля 2024 20:30
   
